# OAH_Denoising

./: .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
Denoising/: data preperation.py
Segmentation/: Cell_Segmentation.py  Extract Cells and Backgrounds.py  Postprocessing.py  Shlomi_CellCrop.py  cellsam_colab.py
Segmentation/old files/: Extract Cells and Backgrounds.py  Postprocessing.py
Shlomi's Changes (I don't know how to use Github properly yet)/: Preprocessing.py  Preprocessing_MedianSub.py  Shlomi_CellCrop.py  Shlomi_CellSegSort.py  Shlomi_MedianSegOrgSort.py
src/: main.py  utils.py
src/Denoising/: autoencoder.py  autoencoder_trainer.py  data_preperation.py  eval_denoising.py  main_denoising.py  train_autoencoder.py
src/Segmentation/: eval_seg.py  extract_cells.py  main_seg.py  masks.py  sample_video.py
src/Segmentation/old files/: Preprocessing.py
