[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OAH_denoising"
version = "0.1.0"
description = "Short description"
authors = [
  { name="Shlomo Goltsman", email="you@example.com" },
    {name="Roy Leibovici", email="you@example.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",  # example
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
